--- a/albums/package.json
+++ b/albums/package.json
@@ -11,9 +11,13 @@
     "react-native": "0.55.2"
   },
   "devDependencies": {
+    "babel-eslint": "^8.2.3",
     "babel-jest": "22.4.3",
     "babel-preset-react-native": "4.0.0",
+    "eslint": "^4.19.1",
+    "eslint-plugin-prettier": "^2.6.0",
     "jest": "22.4.3",
+    "prettier": "^1.12.1",
     "react-test-renderer": "16.3.1"
   },
   "jest": {
