--- a/tech_stack/package.json
+++ b/tech_stack/package.json
@@ -8,7 +8,9 @@
   },
   "dependencies": {
     "react": "16.3.1",
-    "react-native": "0.55.4"
+    "react-native": "0.55.4",
+    "react-redux": "^5.0.7",
+    "redux": "^4.0.0"
   },
   "devDependencies": {
     "babel-jest": "22.4.4",
