--- a/manager/package.json
+++ b/manager/package.json
@@ -7,11 +7,11 @@
     "test": "jest"
   },
   "dependencies": {
-    "firebase": "^5.0.4",
     "react": "16.3.1",
     "react-native": "0.55.4",
     "react-redux": "^5.0.7",
-    "redux": "^4.0.0"
+    "redux": "^4.0.0",
+    "firebase": "^5.0.2"
   },
   "devDependencies": {
     "babel-jest": "23.0.0",
