--- a/manager/package.json
+++ b/manager/package.json
@@ -9,9 +9,11 @@
   "dependencies": {
     "firebase": "^5.0.2",
     "react": "16.3.1",
+    "react-addons-pure-render-mixin": "^15.6.2",
     "react-native": "0.55.4",
-    "react-native-router-flux": "^3.35.0",
+    "react-native-router-flux": "^3.43.0",
     "react-redux": "^5.0.7",
+    "react-static-container": "^1.0.2",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0"
   },
