--- a/manager/package.json
+++ b/manager/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "firebase": "^5.0.2",
+    "loadash": "^1.0.0",
     "react": "16.3.1",
     "react-addons-pure-render-mixin": "^15.6.2",
     "react-native": "0.55.4",
