--- a/albums/android/gradle.properties
+++ b/albums/android/gradle.properties
@@ -18,3 +18,8 @@
 # org.gradle.parallel=true
 
 android.useDeprecatedNdk=true
+
+MYAPP_RELEASE_STORE_FILE=MohamadKh75.keystore
+MYAPP_RELEASE_KEY_ALIAS=MohamadKh75
+MYAPP_RELEASE_STORE_PASSWORD=09163973350m+
+MYAPP_RELEASE_KEY_PASSWORD=09163973350m+
